added default editor layout to git ingore

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+#Default Editor Layout
+CurrentLayout-default.dwlt
+
 ########## gitignore/Global/Windows.gitignore
 
 # Windows thumbnail cache files
